src/objects/CCobject__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Child_Child_Name__c</fullName>
        <label>Child Child Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Name__c</fullName>
        <label>Child Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>CCobject</label>
</CustomObject>